--- a/package.json
+++ b/package.json
@@ -16,22 +16,7 @@
     "@tensorflow/tfjs": "tensorflow"
   },
   "author": "",
-  "license": "LICENSE 
-
-this software is copyrighted
-
-this osftware is provided open source for you to read
-
-this software is free for you to use
-
-that license applies only to you, not other people
-
-you may not use this software for anybody else to use, only yourself
-
-therefor you may not re-distribute this software or claim it as your own work without express consent from the author 
-
-for distribution, resale, embedding, or other inquiries, contact folkstacl@gmail.com 
-",
+  "license": "see LICENSE",
   "dependencies": {
     "@tensorflow/tfjs": "^0.11.6",
     "@tensorflow/tfjs-node-gpu": "^0.1.9",
@@ -39,8 +24,10 @@ for distribution, resale, embedding, or other inquiries, contact folkstacl@gmail
     "babel-cli": "^6.26.0",
     "babel-preset-node6": "^11.0.0",
     "browserify-shim": "^3.8.14",
+    "klaw-sync": "^4.0.0",
     "math-random": "^1.0.1",
-    "typedarray-to-buffer": "^3.1.5"
+    "typedarray-to-buffer": "^3.1.5",
+    "walker": "^1.0.7"
   },
   "devDependencies": {}
 }
