--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "see LICENSE",
   "dependencies": {
     "@tensorflow/tfjs": "^0.11.6",
-    "@tensorflow/tfjs-node-gpu": "^0.1.9",
+    "@tensorflow/tfjs-node": "^0.3.0",
+    "@tensorflow/tfjs-node-gpu": "0.1.9",
     "arraybuffer-to-buffer": "0.0.4",
     "ascjsify": "^1.0.0",
     "babel-cli": "^6.26.0",
