--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "babel-cli": "^6.26.0",
     "babel-preset-node6": "^11.0.0",
     "browserify-shim": "^3.8.14",
+    "chalk": "^3.0.0",
     "klaw-sync": "^4.0.0",
     "math-random": "^1.0.1",
     "minimist": "^1.2.0",
+    "ndarray": "^1.0.18",
     "to-arraybuffer": "^1.0.1",
     "typedarray-to-buffer": "^3.1.5"
   },
