--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "author": "",
   "license": "see LICENSE",
   "dependencies": {
-    "@tensorflow/tfjs": "^0.11.6",
-    "@tensorflow/tfjs-node": "^0.3.0",
-    "@tensorflow/tfjs-node-gpu": "0.1.9",
+    "@tensorflow/tfjs": "",
+    "@tensorflow/tfjs-node": "",
+    "@tensorflow/tfjs-node-gpu": "",
     "arraybuffer-to-buffer": "0.0.4",
     "ascjsify": "^1.0.0",
     "babel-cli": "^6.26.0",
